build box cleanup