@@ -12,6 +12,7 @@
                            [cryogen-core "0.1.60"]]
             :plugins [[lein-ring "0.9.7"]]
             :main cryogen.core
+            ;:jvm-opts ["-Xmx1G" "-Xverify:none"] ; additive by default -- https://github.com/technomancy/leiningen/pull/1230
             :uberjar-name "app.jar"
             :ring {:init cryogen.server/init
                    :handler cryogen.server/handler})
